--- a/style.css
+++ b/style.css
@@ -3,46 +3,27 @@ body {
   background-image: url(piano4k.jpg);
   background-position: top;
   background-size: 1540px 769px;
+}
 
+h1 {
+  color: ivory;
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: 600;
+  margin-top: 100px;
+  font-style: italic;
+  text-shadow: 5px 5px 8px rgba(25, 29, 35, 0.329),
+    10px 10px 8px rgba(42, 48, 59, 0.389), 15px 15px 8px rgba(33, 40, 53, 0.312);
 }
 
 section {
   transform: rotate(90deg);
-
   position: absolute;
   transform-origin: center;
   margin-left: 630px;
-  margin-top: -300px;
+  margin-top: -400px;
   font-family: fantasy;
-  font-;
 }
-
-/*p {
-  display: block;
-  text-decoration: none;
-  font-size: 50px;
-  position: absolute;
-  margin-left: 650px;
-  color: rgba(60, 255, 0, 0);
-  border: 8px solid rgba(0, 0, 0, 0.725);;
-  background-color: rgba(250, 235, 215, 0)
-  transform: rotate(-90deg);
-  border-width:20px;
-  border-hight:100px;
-margin-left:200px;
-margin-top:333px
-padding-top:20px
-}
-
-p:hover {
-  font-size: 50px;
-  color: rgb(60, 255, 0);
-  border: 4px solid black;
-  background-color: antiquewhite;
-  position: absolute;
-  border-width: 30px;
-  
-}*/
 
 .ltrb {
   position: absolute;
@@ -59,26 +40,13 @@ p:hover {
 
 .ltrb:hover {
   font-size: 22px;
-  color: rgb(255, 255, 255);
+  color: ivory;
   border: 4px solid black;
   background-color: rgba(250, 235, 215, 0);
   position: absolute;
   border-width: 1px;
 }
-/*.ltrw {
-  font-size: 28px;
-  transform: rotate(-90deg);
-  margin: -20px;
-  border-width: 01px;
-  color: rgb(0, 0, 0);
-  border: 8px solid rgba(0, 0, 0, 0);
-  padding-top: 220px;
-  padding-left: 25px;
-  padding-bottom: 5px;
-  margin-left: 0px;
-  margin-top: -200px;
-  font-weight: 600;
-}*/
+
 .ltrw {
   font-size: 30px;
   transform: rotate(-90deg);
@@ -117,14 +85,14 @@ p:hover {
 .white {
   height: 65px;
   width: 260px;
-  background-color:ivory;
+  background-color: ivory;
   border: 2px outset black;
   border-radius: 8px;
 }
 
 .white:hover {
-  box-shadow: 5px 5px 8px rgba(43, 48, 58, 0.849),
-    10px 10px 8px rgba(42, 48, 59, 0.514), 15px 15px 8px rgba(33, 40, 53, 0.466);
+  box-shadow: 5px 5px 8px rgba(25, 29, 35, 0.863),
+    10px 10px 8px rgba(42, 48, 59, 0.584), 15px 15px 8px rgba(33, 40, 53, 0.529);
 }
 
 .black:hover {
